Restore xml-apis JAR to support modjy tests.
Also, a -XX:MaxPermSize=128m JVM argument appears necessary to make the
tests run on Windows. Currently they still fail because a test file
test_apps_dir/invocation_tests.py is missing.